[package]
name = "dosh"
version = "0.1.0"
authors = ["mzyzc <mzyzc@czyz.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
json = "0.12"
tui = { version = "0.16", default-features = false, features = ["crossterm"] }
ureq = "2.1"